...
    <string name="my_medicines">Мои лекарства</string>
    <string name="take_medicine">Пора принять лекарство</string>
    <string name="take_medicines">Пора принять лекарства</string>
    <string name="overdue_medicine">Просроченный приём</string>
    <string name="overdue_medicines">Просроченные приёмы</string>
    <string name="choose">Выбрать</string>
    <string name="done">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="clear">Очистить</string>
    <string name="birth_date">Дата рождения</string>
    <string name="date">Дата</string>
    <string name="date_input_placeholder">ДД.ММ.ГГГГ</string>
    <string name="invalid_date">Введите корректную дату</string>
...
