...
                title = DosageUnit::title,
                columns = 3,
            )
            DecimalField(
                value = tabletsPerIntake,
                onValueChanged = onTabletsChanged,
                label = "Таблеток за один приём",
                showError = showError,
                allowZero = false,
                modifier = Modifier.focusRequester(tabletsFocusRequester),
                imeAction = if (trackStock) ImeAction.Next else ImeAction.Done,
                keyboardActions = KeyboardActions(
                    onNext = { packageFocusRequester.requestFocus() },
...
